--- a/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/lms/static/sass/partials/lms/theme/_extras.scss
@@ -12,7 +12,7 @@ h1,
 p,
 input,
 div,
-span,
+label,
 button {
     font-family: Roboto sans-serif !important;
 }
@@ -132,8 +132,7 @@ button {
     color: $primary;
 }
 .courses-container .courses .course {
-	border-bottom: 3px solid $primary;
-
+    border-bottom: 3px solid $primary;
 }
 
 // Footer
@@ -182,9 +181,11 @@ nav.nav-colophon ol {
     color: #767676;
     text-align: left;
     font-size: 11px;
+    font-family: Roboto sans-serif !important;
     & a {
         color: #0075b4;
         text-decoration: none !important;
+        font-family: Roboto sans-serif !important;
         &:hover {
             border-bottom: 1px dotted #0075b4;
         }
@@ -202,5 +203,85 @@ nav.nav-colophon ol {
         &:hover {
             border-bottom: 1px dotted #0075b4;
         }
+    }
+}
+// For login page
+#login-and-registration-container {
+    margin-top: 20px;
+}
+#login-and-registration-container {
+    & .toggle-form {
+        font-size: 16px;
+        padding-bottom: 14px;
+        position: relative;
+        & span {
+        }
+        & a.form-toggle {
+            text-decoration: none;
+            font-size: 16px;
+            color: #00688d;
+            &:hover {
+                color: #003041;
+                text-decoration: underline;
+            }
+        }
+        &:after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 0px;
+            width: 100%;
+            height: 1px;
+            background-color: rgb(206, 206, 206);
+        }
+    }
+    & h1.section-title {
+        font-size: 18px;
+        font-weight: bold;
+        margin: 10px 0px;
+    }
+    & span.label-text {
+        font-size: 16px;
+    }
+    & span.text {
+        font-size: 16px;
+        font-family: Roboto sans-serif !important;
+    }
+    & #login-email-desc {
+        font-size: 13px;
+        color: #555;
+        font-family: Roboto sans-serif !important;
+    }
+    & button.login-help,
+    button.enterprise-login {
+        color: #0075b4;
+        &:hover {
+            color: #003041;
+            text-decoration: underline;
+        }
+    }
+    & button.action {
+        margin-top: 10px;
+        padding: 8px 16px;
+        border-radius: 4px;
+        box-shadow: none;
+        font-size: 16px;
+    }
+    #login {
+        padding-bottom: 15px;
+        position: relative;
+    }
+    .login-provider.button-oa2-google-oauth2 .icon .icon-image,
+    .financial-assistance-wrapper
+        .financial-assistance-form
+        .login-provider.button-oa2-google-oauth2
+        .icon
+        .icon-image {
+        background-color: #fff;
+        padding: 5px;
+    }
+    .login-provider,
+    .financial-assistance-wrapper .financial-assistance-form .login-provider {
+        width: 110px;
     }
 }
