--- a/lms/templates/main.html
+++ b/lms/templates/main.html
@@ -83,8 +83,8 @@ from common.djangoapps.pipeline_mako import render_require_js_path_overrides
   <script type="text/javascript" src="${static.url(jsi18n_path)}"></script>
   <script type="text/javascript" src="${static.url(ie11_fix_path)}"></script>
   <% favicon_url = branding_api.get_favicon_url() %>
-  <link rel="icon" type="image/x-icon" href="${favicon_url}"/>
 
+  <link rel="icon" type="image/x-icon" href="${favicon_url}"/>
 
 
   <%static:css group='style-vendor'/>
@@ -100,6 +100,7 @@ from common.djangoapps.pipeline_mako import render_require_js_path_overrides
   % else:
     <%static:css group='${self.attr.main_css}'/>
   % endif
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   % if disable_courseware_js:
     <%static:js group='base_vendor'/>
@@ -173,7 +174,6 @@ from common.djangoapps.pipeline_mako import render_require_js_path_overrides
 </head>
 
 <body class="${static.dir_rtl()} <%block name='bodyclass'/> lang_${LANGUAGE_CODE}">
-
 <%static:optional_include_mako file="body-initial.html" is_theming_enabled="True" />
 <div id="page-prompt"></div>
 % if not disable_window_wrap:
